# taskmaster

./: .gitignore  config.yaml  flake.nix  pyproject.toml  readme.md
.devcontainer/: devcontainer.json  setup.sh
src/: Client.py  Logger.py  NotificationItem.py  Server.py  Task.py  Taskmaster.py  TaskmasterSession.py  client.py  main.py  server.py  webhook.py
